# newpredict

./: .gitignore  README.md  pyproject.toml
output/: tracking.csv
scripts/: build_training_dataset.py  eval_topk_strict.py  run_backfill.py  run_daily.py  train_first_limitup_with_meta.py  train_lightgbm.py
src/apredict.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/apredict/features/: feature_set.py  limitup.py  tech.py
src/apredict/io/: loader.py  schema.py  stock_meta.py
src/apredict/ml/: infer.py
src/apredict/phase_a/: filter.py  limitup_pool.py
src/apredict/phase_b/: rank.py
src/apredict/tracking/: __init__.py  live_tracker.py  tracker.py
tools/: backfill_from_history.py
