[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apredict"
version = "0.1.0"
description = "A-share limit-up prediction (offline)"
requires-python = ">=3.9"
dependencies = ["pandas", "numpy"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]